fix: CancellationToken lifecycle and concurrent segmentation races
- ScheduleSegmentationUpdate: remove immediate Dispose() after Cancel();
  instead pass oldCts to the debounced task and dispose in its finally
  block, eliminating the ObjectDisposedException risk on the background
  extraction thread

- RunInitialSegmentationAsync: replace CancellationToken.None with a
  proper _segmentationCts entry so slider events during initial load
  cancel the extraction cleanly rather than racing with debounced previews

- RunDebouncedSegmentationAsync: add oldCts parameter; OperationCanceledException
  is caught as a normal non-error state (user moved slider again)

Also includes E3-T1/T2 work staged from previous sessions:
  ISegmentationService, SegmentationService (dual-threshold, parallel
  extraction, Taubin smoothing + decimation pipeline), MeshProcessor
  (vertex clustering + Taubin), UI slider handlers and Apply button

--- a/src/CMFPlanner.Segmentation/CMFPlanner.Segmentation.csproj
+++ b/src/CMFPlanner.Segmentation/CMFPlanner.Segmentation.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CMFPlanner.Core\CMFPlanner.Core.csproj" />
+    <ProjectReference Include="..\CMFPlanner.Visualization\CMFPlanner.Visualization.csproj" />
   </ItemGroup>
 
 </Project>
