feat: UI cleanup, 2D metric grid overlay, maximize on launch
- Launch maximized by default (WindowState=Maximized in XAML)
- Toolbar: remove Bite Ref, Reset Camera, 2D Slices, 3D View buttons;
  keep only Open DICOM, NHP, Soft Tissue
- Workflow step 1 renamed to "DICOM Viewer / Load and inspect CT or CBCT series"
- Move metric reference grid from 3D viewport to 2D slice views:
  - AdaptiveGridVisual3D removed from Viewport3D entirely
  - AxialGridCanvas / CoronalGridCanvas / SagittalGridCanvas added inside
    each Viewbox (voxel-space overlay, auto-scales with Viewbox)
  - Adaptive spacing: 10 mm default, 5 mm zoomed, 1 mm max zoom
  - Major lines every 10 mm; minor lines semi-transparent white
  - Grid redraws on SizeChanged (including expand/collapse) and SetVolume
  - BtnToggleGrid now shown in 2D view, hidden in 3D view, wired to
    TriplanarViewer.SetGridVisible()

--- a/src/CMFPlanner.Visualization/CMFPlanner.Visualization.csproj
+++ b/src/CMFPlanner.Visualization/CMFPlanner.Visualization.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="fo-dicom" Version="5.2.5" />
+    <PackageReference Include="fo-dicom.Codecs" Version="5.9.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="10.0.3" />
   </ItemGroup>
 
